--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,59 @@
 body {
     background-color: #303030;
+    text-align: center;
 }
 
 input[type=text] {
-    width: 75%;
-    height: 10%;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
 
 .container {
+    background-color: #5ADFFF;
+    max-width: 600px;
     position: relative;
     top: 30px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: lightblue;
     border-radius: 5%;
     border: 3px solid deepskyblue;
-}
-.container {
-    max-width: 600px;
-    text-align: center;
+    background-color: lightblue;
 }
 
 .btn {
-    margin-top: 5px;
+    margin: 2px;
     border: 2px solid dodgerblue;
     font-size: 26px;
-    width: 120px;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
+    background-color: #F2F2F2;
+}
+
+.operator {
+    background-color: #FDAD5C;
 }
 
 #outputValue {
     text-align: right;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 28px;
+    color: black;
+    border-color: black;
     border-top: transparent;
+    background-color: white;
 }
 
 #historyValue {
+    margin-top: 15px;
     text-align: right;
     font-size: 20px;
+    color: black;
+    border-color: black;
     border-bottom: transparent;
+    background-color: white;
 }
 
 #keyboard {
     padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 
